chore: resolve master merge conflicts and update to new College/User schemas